--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,10 +1,95 @@
 footer {
     background-color:#ffd541;
     text-align: center;
+    @media only screen and (min-width:991px) {
+        padding-top:120px;
+    }
     .payment-types {
-        border-bottom:1px solid #e5e5e5;
         @media only screen and (min-width:991px) {
             display: none;
+        }
+    }
+    .newsletter {
+        display: none;
+        @media only screen and (min-width:991px) {
+            display: block;
+            margin:0 0 90px;
+            h3 {
+                width:37%;
+                margin: 0 auto;
+                font-size:24px;
+                font-weight:bold;
+                padding-bottom:20px;
+                border-bottom: 1px solid #e6be3a;
+            }
+        }
+    }
+    .footer-links {
+        border-top: 1px solid #e6be3a;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        padding:55px 0 45px;
+        .footer-logo {
+            @media only screen and (min-width:991px) {
+                order:2;
+                position: absolute;
+                left: 0;
+                right: 0;
+                width: 40px;
+                margin: auto;
+                img {
+                    vertical-align: middle;
+                }
+            }
+        }
+        .menus {
+            margin:35px 0 75px;
+            @media only screen and (min-width:991px) {
+                order: 1;
+                margin:0;
+                li {
+                    a {
+                        &:hover {
+                            &::before {
+                                opacity:0.5;
+                            }
+                        } 
+                    }
+                }
+            }
+        }
+        .social-links {
+            display:flex;
+            list-style: none;
+            padding:0;
+            margin:0 0 35px;
+            li {
+                font-size:30px;
+                margin:0 20px;
+            }
+            a {
+                color:#000;
+            }
+            @media only screen and (min-width:991px) {
+                order:3;
+                margin:0;
+                li {
+                    font-size:20px;
+                }
+            }
+        }
+        @media only screen and (min-width:991px) {
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 35px 30px 35px 0;
+            margin-left:75px;
+            position: relative;
+        }
+    }
+    @media only screen and (min-width: 991px) {
+        p {
+            display:none;
         }
     }
 }
