--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,7 +1,7 @@
 .container {
-  padding-left:0;
+  padding:150px 20px 0;
   @media only screen and (min-width:991px) {
-    padding-left:55px;
+    padding:0 0 0 55px;
   }
 }
 
