--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,7 +1,7 @@
 .container {
   padding:150px 20px 0;
   @media only screen and (min-width:991px) {
-    padding:0 0 0 55px;
+    padding:150px 0 0 55px;
   }
 }
 
