--- a/src/components/product/components/description-content/DescriptionContent.scss
+++ b/src/components/product/components/description-content/DescriptionContent.scss
@@ -5,10 +5,37 @@
         display:flex;
         flex-direction: column;
         margin-bottom:45px;
+        @media only screen and (min-width:768px) {
+            background-color:transparent;
+            flex-direction: row;
+            padding:0;
+        }
         .image {
             order:1;
+            background-size:cover;
+            background-position: center center;
+            padding-bottom:64%;
             img {
                 width:100%;
+            }
+            @media only screen and (min-width:768px) {
+                order:2;
+                flex:0 0 63%;
+                padding-bottom:50%;
+            }
+            @media only screen and (min-width:991px) {
+                flex:0 0 73%;
+                position: relative;
+                &:before {
+                    content:'';
+                    position: absolute;
+                    right:0;
+                    top:0;
+                    background-color:#f0f0f0;
+                    width:100%;
+                    height:100%;
+                    transition:all 0.5s ease-out 0s;
+                }
             }
         }
         .content {
@@ -20,6 +47,19 @@
                     margin:0;
                     font-weight:bold;
                     font-size:28px;
+                    line-height:1.3;
+                    @media only screen and (min-width:991px) {
+                        opacity:0;
+                        transform:translateY(10px);
+                        transition:all 0.5s ease-out 0s;
+                    }
+                }
+                @media only screen and (min-width:768px) {
+                    padding-right:65px;
+                    width:calc(165% + 65px);
+                    background-color:#f0f0f0;
+                    position: relative;
+                    z-index:1;
                 }
             }
             p {
@@ -27,6 +67,44 @@
                 line-height:1.6;
                 text-align: justify;
                 margin:0 0 25px;
+                @media only screen and (min-width:991px) {
+                    opacity:0;
+                    transform:translateY(10px);
+                    transition:all 0.5s ease-out 0s;
+                }
+            }
+            @media only screen and (min-width:768px) {
+                order:1;
+                padding-right:75px;
+            }
+        }
+    }
+}
+.active {
+    .description-content {
+        .description-content-box {
+            .image {
+                @media only screen and (min-width:991px) {
+                    &:before {
+                        width:0%;
+                    }
+                }
+            }
+            .content {
+                .title {
+                    h2 {
+                        @media only screen and (min-width:991px) {
+                            opacity:1;
+                            transform:translateY(0)
+                        }
+                    }
+                }
+                p {
+                    @media only screen and (min-width:991px) {
+                        opacity:1;
+                        transform:translateY(0)
+                    }
+                }
             }
         }
     }
