--- a/src/components/product/components/description-video/DescriptionVideo.scss
+++ b/src/components/product/components/description-video/DescriptionVideo.scss
@@ -1,13 +1,110 @@
 .description-video {
     .description-content-box {
         background-color:#fff;
-        padding:20px;
+        padding:30px 0 0;
+        margin-bottom:45px;
+        @media only screen and (min-width:768px) {
+            background-color:transparent;
+            padding:0;
+            position: relative;
+        }
         .title {
-            padding:40px 0;
+            padding:40px 20px;
             h2 {
                 margin:0;
                 font-weight:bold;
                 font-size:28px;
+                @media only screen and (min-width:991px) {
+                    opacity:0;
+                    transform:translateY(10px);
+                    transition:all 0.5s ease-out 0s;
+                }
+            }
+            @media only screen and (min-width:768px) {
+                position: absolute;
+                width:43%;
+                background-color:#f0f0f0;
+                top:0;
+                left:0;
+                padding: 20px 20px 40px;
+            }
+        }
+        .image {
+            position: relative;
+            height:450px;
+            background-size:cover;
+            background-position: center center;
+            margin:0 -20px;
+            @media only screen and (min-width:768px) {
+                margin:0;
+                padding-bottom:48%;
+            }
+            @media only screen and (min-width:991px) {
+                &:before {
+                    content:'';
+                    position: absolute;
+                    right:0;
+                    top:0;
+                    background-color:#f0f0f0;
+                    width:100%;
+                    height:100%;
+                    transition:all 0.5s ease-out 0s;
+                    z-index:5;
+                }
+            }
+            &:after {
+                content:'';
+                position: absolute;
+                left:0;
+                top:0;
+                width:100%;
+                height:100%;
+                background-color:#000;
+                opacity:0.6;
+            }
+            .video-icon {
+                position: absolute;
+                width:78px;
+                height:78px;
+                border-radius:100%;
+                background-color:#ffd541;
+                z-index:1;
+                left:0;
+                right:0;
+                top:0;
+                bottom:0;
+                margin:auto;
+                display:flex;
+                justify-content: center;
+                align-items: center;
+                font-size:20px;
+                box-shadow: 0 0 0 25px rgba(255, 213, 65, 0.2);
+                @media only screen and (min-width:768px) {
+                    width:40px;
+                    height:40px;
+                    font-size:14px;
+                }
+            }
+        }
+    }
+}
+.active {
+    .description-video {
+        .description-content-box {
+            .image {
+                @media only screen and (min-width:991px) {
+                    &:before {
+                        width:0%;
+                    }
+                }
+            }
+            .title {
+                h2 {
+                    @media only screen and (min-width:991px) {
+                        opacity:1;
+                        transform:translateY(0)
+                    }
+                }
             }
         }
     }
