--- a/src/components/product/components/details/Details.scss
+++ b/src/components/product/components/details/Details.scss
@@ -1,20 +1,40 @@
 .details-content-box {
     margin-bottom:45px;
+    @media only screen and (min-width:768px) {
+        padding-left:40px;
+    }
+    @media only screen and (min-width:991px) {
+        padding-left:80px;
+    }
     .details-content {
         padding:0 20px;
         background-color:#fff;
         display:flex;
         flex-direction: column;
+        @media only screen and (min-width:768px) {
+            flex-direction: row;
+            padding:20px 0;
+        }
         .product-image {
             margin-top:-42px;
             img {
                 width:100%;
+            }
+            @media only screen and (min-width:768px) {
+                margin:0 0 0 -20px;
+                align-self: center;
+            }
+            @media only screen and (min-width:991px) {
+                margin:0 0 0 -40px;
             }
         }
         .product-description {
             padding:40px 20px;
             display:flex;
             justify-content: center;
+            @media only screen and (min-width:991px) {
+                padding:40px 70px;
+            }
             h1 {
                 font-weight: bold;
                 margin:0 0 10px;
@@ -85,6 +105,7 @@
                     padding:0;
                     margin: 0;
                     list-style: none;
+                    overflow: hidden;
                     li {
                         float:left;
                         margin-right:5px;
