--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,10 @@ body {
  font-family: 'Open Sans'; 
  font-size:14px;
  background-color:#f0f0f0;
+ overflow: -moz-scrollbars-none;
+ -ms-overflow-style: none;
+ &::-webkit-scrollbar { width: 0 !important }
+
 }
 
 code {
@@ -25,4 +29,7 @@ code {
 }
 img {
   max-width:100%;
+}
+a {
+  text-decoration: none;
 }
